Edit user details endpoint to accept username instead, alter relevant handler functions accordingly
